disks/pcx86/os2/ibm/1.2/README.md
---
layout: page
title: IBM OS/2 1.2
permalink: /disks/pcx86/os2/ibm/1.2/
---

IBM OS/2 1.2
------------

### Directory of IBM OS/2 1.2 (Install)

	 Volume in drive A is OS2 INSTALL
	 Volume Serial Number is 24F9-9015

	Directory of A:\

	OS2LDR           14336 08-31-89  12:00p
	OS2KRNL         339770 08-31-89  12:00p
	ABIOS    SYS       120 08-31-89  12:00p
	SYSINSTX COM     45344 08-31-89  12:00p
	SIPANEL1 DLL     17696 08-31-89  12:00p
	ANSICALL DLL      4133 08-31-89  12:00p
	BKSCALLS DLL      7175 08-31-89  12:00p
	BMSCALLS DLL      4157 08-31-89  12:00p
	BVSCALLS DLL     20563 08-31-89  12:00p
	BASEDD01 SYS     57413 08-31-89  12:00p
	BASEDD02 SYS     62933 08-31-89  12:00p
	BASEDD03 SYS     57413 08-31-89  12:00p
	CMD      EXE     86320 08-31-89  12:00p
	CGA      RC@      4844 08-31-89  12:00p
	EGA      RC@      4883 08-31-89  12:00p
	PLASMA   RC@      4900 08-31-89  12:00p
	VGAM     RC@      4900 08-31-89  12:00p
	VGA      RC@      4900 08-31-89  12:00p
	8514     RC@      4898 08-31-89  12:00p
	8514M    RC@      4900 08-31-89  12:00p
	INISYS   RC@       679 08-31-89  12:00p
	INI      RC@      3739 08-31-89  12:00p
	UPINI    RC@       545 08-31-89  12:00p
	CONFIG   SYS       329 08-31-89  12:00p
	COUNTRY  SYS     13676 08-31-89  12:00p
	DOSCALL1 DLL     14651 08-31-89  12:00p
	F80000   BIO      9728 08-31-89  12:00p
	F80100   BIO      9216 08-31-89  12:00p
	F80402   BIO      1536 08-31-89  12:00p
	F80902   BIO      1536 08-31-89  12:00p
	F80D00   BIO      1536 08-31-89  12:00p
	FC0400   BIO      9728 08-31-89  12:00p
	FC0403   BIO      1536 08-31-89  12:00p
	FC0500   BIO      9728 08-31-89  12:00p
	F80C00   BIO      1024 08-31-89  12:00p
	F80702   BIO      1536 08-31-89  12:00p
	FDISK    COM     45440 08-31-89  12:00p
	HARDERR  EXE     17088 08-31-89  12:00p
	KBDCALLS DLL      8265 08-31-89  12:00p
	KEYBOARD DCP      5177 08-31-89  12:00p
	MONCALLS DLL      7348 08-31-89  12:00p
	MOUCALLS DLL      5692 08-31-89  12:00p
	MSG      DLL      6218 08-31-89  12:00p
	NAMPIPES DLL      1553 08-31-89  12:00p
	NLS      DLL      5428 08-31-89  12:00p
	OSO001   MSG    105387 08-31-89  12:00p
	HPFS     IFS     97306 08-31-89  12:00p
	QUECALLS DLL     10282 08-31-89  12:00p
	SESMGR   DLL     30017 08-31-89  12:00p
	SWAPPER  EXE      4660 08-31-89  12:00p
	SYSINST1 EXE      3936 08-31-89  12:00p
	SYSINST2 EXE    103888 08-31-89  12:00p
	VDISK    SYS      4660 08-31-89  12:00p
	BVHINIT  DLL      9758 08-31-89  12:00p
	VIOCALLS DLL     17430 08-31-89  12:00p
	VTBL850  DCP     10478 08-31-89  12:00p
	       56 file(s)    1332332 bytes

	Total files listed:
	       56 file(s)    1332332 bytes
	                      111104 bytes free

### Directory of IBM OS/2 1.2 (Disk 1)

	 Volume in drive A is OS2 DISK 1 
	 Volume Serial Number is E481-A015

	Directory of A:\

	ANSI     EX@      9521 08-31-89  12:00p
	ANSI     SY@      2123 08-31-89  12:00p
	APPEND   EX@      4486 08-31-89  12:00p
	ASSIGN   CO@      1526 08-31-89  12:00p
	ATTRIB   EX@     28076 08-31-89  12:00p
	BOOT     CO@     31322 08-31-89  12:00p
	CACHE    EX@     10391 08-31-89  12:00p
	COMMAND  CO@     22394 08-31-89  12:00p
	COMP     CO@     30214 08-31-89  12:00p
	DDINSTAL EX@     50537 08-31-89  12:00p
	DISKCOMP CO@     32006 08-31-89  12:00p
	DISKCOPY CO@     32857 08-31-89  12:00p
	EAUTIL   EX@     29501 08-31-89  12:00p
	EDLIN    CO@      5674 08-31-89  12:00p
	FIND     EX@     25510 08-31-89  12:00p
	GRAFTABL CO@      5702 08-31-89  12:00p
	JOIN     EX@     18980 08-31-89  12:00p
	KEYB     CO@     13481 08-31-89  12:00p
	LABEL    CO@     25430 08-31-89  12:00p
	SYSLOG   EX@     54440 08-31-89  12:00p
	BACKUP   EXE     29095 08-31-89  12:00p
	CHKDSK   COM     67968 08-31-89  12:00p
	FORMAT   COM     57552 08-31-89  12:00p
	KEYBOARD DCP     94007 08-31-89  12:00p
	RECOVER  COM     53696 08-31-89  12:00p
	RESTORE  EXE     38251 08-31-89  12:00p
	SIPANEL2 DLL    174976 08-31-89  12:00p
	STARTLW  DLL      1076 08-31-89  12:00p
	SYSINST  SCD      6220 08-31-89  12:00p
	UHPFS    DLL    150336 08-31-89  12:00p
	UNPACK   EXE     52096 08-31-89  12:00p
	       31 file(s)    1159444 bytes

	Total files listed:
	       31 file(s)    1159444 bytes
	                      290304 bytes free

### Directory of IBM OS/2 1.2 (Disk 2)

	 Volume in drive A is OS2 DISK 2 
	 Volume Serial Number is E55B-6015

	Directory of A:\

	BASIC    CO@       479 08-31-89  12:00p
	BASICA   CO@     35573 08-31-89  12:00p
	COM01    SY@      6221 08-31-89  12:00p
	COM02    SY@      9382 08-31-89  12:00p
	CONVERT  EX@     15080 08-31-89  12:00p
	CREATEDD EX@     21059 08-31-89  12:00p
	FDISKPM  EX@     52571 08-31-89  12:00p
	FDISKPMH HL@      8260 08-31-89  12:00p
	LINK     EX@     99356 08-31-89  12:00p
	LOGDAEM  EX@     18775 08-31-89  12:00p
	MODE     CO@     38821 08-31-89  12:00p
	MORE     CO@     26899 08-31-89  12:00p
	MORTGAGE BA@      4673 08-31-89  12:00p
	MOUSE    SY@     12182 08-31-89  12:00p
	IBMMOU01 SY@      1759 08-31-89  12:00p
	IBMMOU02 SY@      2266 08-31-89  12:00p
	MSBUS01  SY@      2033 08-31-89  12:00p
	MSINP01  SY@      1702 08-31-89  12:00p
	MSPS201  SY@      1796 08-31-89  12:00p
	MSPS202  SY@      2404 08-31-89  12:00p
	MSSER01  SY@      2294 08-31-89  12:00p
	MSSER02  SY@      2687 08-31-89  12:00p
	PCMOU01  SY@      2038 08-31-89  12:00p
	PCMOU02  SY@      2476 08-31-89  12:00p
	VISION01 SY@      2053 08-31-89  12:00p
	VISION02 SY@      2461 08-31-89  12:00p
	OSO001H  MS@     67177 08-31-89  12:00p
	PATCH    EX@     32494 08-31-89  12:00p
	POINTDD  SY@      5563 08-31-89  12:00p
	PRINT    CO@     26941 08-31-89  12:00p
	PSTAT    EX@     12991 08-31-89  12:00p
	REPLACE  EX@     31661 08-31-89  12:00p
	SETCOM40 EX@      7784 08-31-89  12:00p
	SORT     EX@     26560 08-31-89  12:00p
	SPOOL    EX@     15872 08-31-89  12:00p
	STXTDMPC DL@      9751 08-31-89  12:00p
	SUBST    EX@     18529 08-31-89  12:00p
	SYSLEVEL EX@     26546 08-31-89  12:00p
	SYSLEVEL OS@       140 08-31-89  12:00p
	TRACE    EX@     19612 08-31-89  12:00p
	TRACEFMT EX@     33421 08-31-89  12:00p
	TREE     CO@     27443 08-31-89  12:00p
	VIOTBL   DC@     17780 08-31-89  12:00p
	XCOPY    EX@     37979 08-31-89  12:00p
	HELPMGR  DL@     95293 08-31-89  12:00p
	HMHELP   HL@     13802 08-31-89  12:00p
	PMHINIT  DL@      2867 08-31-89  12:00p
	E        EX@     19261 08-31-89  12:00p
	EHXDDLGS DL@     44773 08-31-89  12:00p
	EHXDL    DL@     11327 08-31-89  12:00p
	PMMLE    DL@     48775 08-31-89  12:00p
	EHXHP    HL@     19654 08-31-89  12:00p
	       52 file(s)    1049296 bytes

	Total files listed:
	       52 file(s)    1049296 bytes
	                      394752 bytes free

### Directory of IBM OS/2 1.2 (Disk 3)

	 Volume in drive A is OS2 DISK 3 
	 Volume Serial Number is 24F6-F815

	Directory of A:\

	CMDREF   IN@    164344 08-31-89  12:00p
	CPISPFPC DL@     88475 08-31-89  12:00p
	DMPC     EX@      2093 08-31-89  12:00p
	DOS      SY@      1214 08-31-89  12:00p
	DOSCALLS LI@     16606 08-31-89  12:00p
	DTM      DL@       958 08-31-89  12:00p
	EGA      SY@      2534 08-31-89  12:00p
	EXTDSKDD SY@      1765 08-31-89  12:00p
	HELP     BA@       361 08-31-89  12:00p
	HELP     CM@       353 08-31-89  12:00p
	HELPMSG  EX@     28289 08-31-89  12:00p
	INACALL  DL@       926 08-31-89  12:00p
	INSTAID  CM@       256 08-31-89  12:00p
	INSTAID  CN@       250 08-31-89  12:00p
	INSTAID  LI@      9179 08-31-89  12:00p
	INSTAID  PR@       229 08-31-89  12:00p
	INSTAIDE EX@     66298 08-31-89  12:00p
	ISPD     MS@      1196 08-31-89  12:00p
	ISPM     MS@       485 08-31-89  12:00p
	PMCPL    EX@     64886 08-31-89  12:00p
	PMCPLH   HL@     23582 08-31-89  12:00p
	PMEXEC   EX@     48440 08-31-89  12:00p
	PMEXECH  HL@     22145 08-31-89  12:00p
	PMFILE   EX@    157367 08-31-89  12:00p
	PMFILEH  HL@     48502 08-31-89  12:00p
	PMSHELL  EX@      7186 08-31-89  12:00p
	PMSHELLH HL@      1262 08-31-89  12:00p
	PMSHLTKT DL@      3866 08-31-89  12:00p
	PMSPOOL  EX@     54349 08-31-89  12:00p
	PMSPOOLH HL@     23857 08-31-89  12:00p
	VIEW     EX@     13598 08-31-89  12:00p
	VIEWDOC  EX@     12901 08-31-89  12:00p
	VIEWH    HL@     12710 08-31-89  12:00p
	       33 file(s)     880462 bytes

	Total files listed:
	       33 file(s)     880462 bytes
	                      569344 bytes free

### Directory of IBM OS/2 1.2 (Disk 4)

	 Volume in drive A is OS2 DISK 4 
	 Volume Serial Number is 24E6-2015

	Directory of A:\

	4201     DC@      5150 08-31-89  12:00p
	5202     DC@       329 08-31-89  12:00p
	COURIER  FO@    163153 08-31-89  12:00p
	IBM4201  DR@     54892 08-31-89  12:00p
	MAKEINI  EX@     41548 08-31-89  12:00p
	OS2SM    DL@     28975 08-31-89  12:00p
	OS2SM    PD@      1340 08-31-89  12:00p
	OS2SMDUM DL@       301 08-31-89  12:00p
	OS2SPLFS DL@      2515 08-31-89  12:00p
	PICH     HL@      9790 08-31-89  12:00p
	PICICHG  EX@     17582 08-31-89  12:00p
	PICPH    HL@     23992 08-31-89  12:00p
	PICPRINT EX@     73096 08-31-89  12:00p
	PICSHOW  EX@     25693 08-31-89  12:00p
	PMAVIO   DL@      4105 08-31-89  12:00p
	PMBIND   DL@     37171 08-31-89  12:00p
	PMC00000 TF@      2215 08-31-89  12:00p
	PMC10000 TF@      3544 08-31-89  12:00p
	PMC20000 TF@     10367 08-31-89  12:00p
	PMC30000 TF@       719 08-31-89  12:00p
	PMC40000 TF@       280 08-31-89  12:00p
	PMC50000 TF@      8066 08-31-89  12:00p
	PMC60000 TF@      1673 08-31-89  12:00p
	PMC70000 TF@      2419 08-31-89  12:00p
	PMC80000 TF@       371 08-31-89  12:00p
	PMGPI    DL@    150569 08-31-89  12:00p
	PMGPI    PD@      3056 08-31-89  12:00p
	PMPIC    DL@     27475 08-31-89  12:00p
	PMPIC    PD@       134 08-31-89  12:00p
	PMPRINT  QP@      8737 08-31-89  12:00p
	PMSHAPI  DL@     38830 08-31-89  12:00p
	PMSHAPI  PD@       778 08-31-89  12:00p
	PMSPL    DL@      5959 08-31-89  12:00p
	PMSPL    PD@       698 08-31-89  12:00p
	PMTKT    DL@     17942 08-31-89  12:00p
	PMTRACE  DL@      1418 08-31-89  12:00p
	PMVIOP   DL@     27308 08-31-89  12:00p
	PMVIOP   HL@      3299 08-31-89  12:00p
	PMWINDUM DL@       637 08-31-89  12:00p
	PSHH     HL@     12427 08-31-89  12:00p
	SPL1B    DL@     35503 08-31-89  12:00p
	SPL1B    PD@      1042 08-31-89  12:00p
	SPL2B    DL@      2630 08-31-89  12:00p
	SPL2B    PD@       176 08-31-89  12:00p
	SPLDVWRK EX@      6529 08-31-89  12:00p
	SPLPRM   EX@     11938 08-31-89  12:00p
	SPOOLCP  DL@      7093 08-31-89  12:00p
	TIMES    FO@    273845 08-31-89  12:00p
	TRSEL    EX@     13655 08-31-89  12:00p
	MOVESPL  EX@     27761 08-31-89  12:00p
	       50 file(s)    1198725 bytes

	Total files listed:
	       50 file(s)    1198725 bytes
	                      245248 bytes free

### Directory of IBM OS/2 1.2 (Disk 5)

	 Volume in drive A is OS2 DISK 5 
	 Volume Serial Number is E48D-0415

	Directory of A:\

	BVH8514A DL@      6248 08-31-89  12:00p
	BVHCGA   DL@     14575 08-31-89  12:00p
	BVHEGA   DL@     20350 08-31-89  12:00p
	BVHMPA   DL@     11456 08-31-89  12:00p
	BVHVGA   DL@     23047 08-31-89  12:00p
	BVHWNDW  DL@      5878 08-31-89  12:00p
	FKA      DL@     11173 08-31-89  12:00p
	HELV     FO@    229361 08-31-89  12:00p
	IBMBGA   DL@    125911 08-31-89  12:00p
	IBMCGA   DL@     68951 08-31-89  12:00p
	IBMEGA   DL@     74348 08-31-89  12:00p
	IBMVGA   DL@     75298 08-31-89  12:00p
	PMDD     SY@      2983 08-31-89  12:00p
	PMGRE    DL@    145955 08-31-89  12:00p
	PMGRE    PD@       206 08-31-89  12:00p
	PMWIN    DL@    185186 08-31-89  12:00p
	PMWIN    PD@      3587 08-31-89  12:00p
	INTROE   EX@     76396 08-31-89  12:00p
	INTROI   TU@     26318 08-31-89  12:00p
	INTROS   TU@     16543 08-31-89  12:00p
	       20 file(s)    1123770 bytes

	Total files listed:
	       20 file(s)    1123770 bytes
	                      328192 bytes free

### Directory of IBM OS/2 1.2 (Driver 1)

	 Volume in drive A is OS2 DISK 6 
	 Volume Serial Number is E55B-AC15

	Directory of A:\

	IBMNULL  DRV     81760 08-31-89  12:00p
	IBM4202  DRV     82000 08-31-89  12:00p
	IBM5216  DRV     62864 08-31-89  12:00p
	IBM52011 DRV     62704 08-31-89  12:00p
	IBM52012 DRV     88320 08-31-89  12:00p
	IBM3852  DRV     81472 08-31-89  12:00p
	IBM5152  DRV     81520 08-31-89  12:00p
	IBM4207  DRV     89488 08-31-89  12:00p
	IBM4208  DRV     89504 08-31-89  12:00p
	IBM5182  DRV     88272 08-31-89  12:00p
	IBM5202  DRV     90672 08-31-89  12:00p
	PLOTTERS DRV     97216 08-31-89  12:00p
	IBM4201  DCP     17069 08-31-89  12:00p
	4208     DCP       533 08-31-89  12:00p
	READMEDD DAT     27676 08-31-89  12:00p
	       15 file(s)    1041070 bytes

	Total files listed:
	       15 file(s)    1041070 bytes
	                      412160 bytes free

### Directory of IBM OS/2 1.2 (Driver 2)

	 Volume in drive A is OS2 DISK 7 
	 Volume Serial Number is E564-4C15

	Directory of A:\

	EPSON    DRV     48640 08-31-89  12:00p
	EPSON    HLP     17920 08-31-89  12:00p
	EPSONDAT DLL     51200 08-31-89  12:00p
	PSCRIPT  DRV    330752 08-31-89  12:00p
	IBM4019  DRV    163840 08-31-89  12:00p
	IBM4019  PMF    173665 08-31-89  12:00p
	        6 file(s)     786017 bytes

	Total files listed:
	        6 file(s)     786017 bytes
	                      671232 bytes free
